--- a/my-app/package.json
+++ b/my-app/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/react-redux": "^5.0.10",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
@@ -20,6 +19,7 @@
     "@types/jest": "^21.1.4",
     "@types/node": "^8.0.46",
     "@types/react": "^16.0.16",
-    "@types/react-dom": "^16.0.2"
+    "@types/react-dom": "^16.0.2",
+    "@types/react-redux": "^5.0.13"
   }
 }
